# wisdom-collector

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
prompts/: 01_normalize_book.md  02_summarize_chapter.md  03_extract_skill_atoms.md  04_synthesize_skill.md  05_evaluate_skill.md
skills/: README.md
skills/beachhead-market-launch/: SKILL.md
skills/culture-diagnosis-and-change/: SKILL.md
skills/data-system-tradeoff-design/: SKILL.md
skills/disruption-response-design/: SKILL.md
skills/engineering-org-system-design/: SKILL.md
skills/executive-effectiveness/: SKILL.md
skills/first-principles-startup-strategy/: SKILL.md
skills/hacker-friendly-software-design/: SKILL.md
skills/high-leverage-team-management/: SKILL.md
skills/lead-organizational-change/: SKILL.md
skills/manage-crucial-conversations/: SKILL.md
skills/people-centered-influence/: SKILL.md
skills/repair-team-dysfunction/: SKILL.md
skills/resonant-leadership/: SKILL.md
skills/run-transparent-okrs/: SKILL.md
skills/self-aware-leadership-development/: SKILL.md
skills/strategic-value-based-negotiation/: SKILL.md
src/: cli.ts  index.ts  pipeline.ts  prompts.ts  types.ts
src/loaders/: load-book.ts  (+1 more)
tests/: book-load-summary.test.ts  book-metadata.test.ts  enrich-skill-family.test.ts  load-book.test.ts  load-existing-skills.test.ts  pdf-extraction.test.ts  pipeline.test.ts  prompts.test.ts  render-skill-markdown.test.ts  skill-overlap.test.ts  slugify.test.ts  test_pipeline.py  test_prompts.py  text.test.ts
(+31 files in other folders)
